--- a/Templates/AppCoder/Curso.html
+++ b/Templates/AppCoder/Curso.html
@@ -1,11 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Curso</title>
-</head>
-Este es mi curso<br>
-Nombre: {{ curso.nombre }}<br>
-Camada: {{ curso.camada }}<br>
-</body>
-</html>
+{% extends 'index.html' %}
+
+{% block title %}
+    Curso
+{% endblock %}
+
+{% block inicio %}
+    Este es mi curso<br>
+    Nombre: {{ curso.nombre }}<br>
+    Camada: {{ curso.camada }}<br>
+{% endblock %}
