Trabajando con vistas

--- a/Templates/AppCoder/Curso.html
+++ b/Templates/AppCoder/Curso.html
@@ -5,7 +5,12 @@
 {% endblock %}
 
 {% block inicio %}
-    Este es mi curso<br>
-    Nombre: {{ curso.nombre }}<br>
-    Camada: {{ curso.camada }}<br>
+
+    {% for curso in object_list %}
+        El nombre del curso es {{ curso.nombre }} con la camada {{ curso.camada }}
+        <a href="{% url 'AppCoderEliminarCurso' curso.camada %}">Eliminar</a>
+        <a href="{% url 'AppCoderEditarCurso' curso.camada %}">Editar</a>
+        <br>
+    {% endfor %}
+
 {% endblock %}
