--- a/Templates/Base/navigation.html
+++ b/Templates/Base/navigation.html
@@ -5,6 +5,12 @@
                 <a class="navbar-brand" href="#!">Estudiantes</a>
                 <a class="navbar-brand" href="#!">Profesor</a>
                 <a class="navbar-brand" href="{% url 'AppCoderEntregable' %}">Entregable</a>
-                <a class="btn btn-primary" href="#signup">Registrarse</a>
+                {% if user.is_authenticated %}
+                    <h5>User: {{ user.get_username }}</h5>
+                    <a class="btn btn-primary" href="{% url 'UserCoderLogout'  %}">Logout</a>
+                {% else %}
+                    <a class="btn btn-primary" href="{% url 'UserCoderLogin'  %}">Login</a>
+                    <a class="btn btn-primary" href="{% url 'UserCoderRegistro'  %}">Registro</a>
+                {% endif %}
             </div>
         </nav>
